--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 			<header id="header">
 				<h1>todos</h1>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
+        <select id="new-priority">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+        </select>
 			</header>
 			<section id="main">
 				<input id="toggle-all" type="checkbox">
@@ -33,18 +39,30 @@
 			<input class="edit" value="<%- title %>">
 		</script>
 		<script type="text/template" id="stats-template">
-			<span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
-			<ul id="filters">
-				<li>
-					<a class="selected" href="#/">All</a>
-				</li>
-				<li>
-					<a href="#/active">Active</a>
-				</li>
-				<li>
-					<a href="#/completed">Completed</a>
-				</li>
-			</ul>
+			<span id="todo-count"><strong><%= remaining %></strong><%= remaining === 1 ? 'item' : 'items' %> left</span>
+      <ul id="filters">
+        <li>
+          <a class="selected" href="#/">All</a>
+        </li>
+        <li>
+          <a href="#/active">Active</a>
+        </li>
+        <li>
+          <a href="#/completed">Completed</a>
+        </li>
+        <li>
+          <a href="#/priority-1">1</a>
+        </li>
+        <li>
+          <a href="#/priority-2">2</a>
+        </li>
+        <li>
+          <a href="#/priority-3">3</a>
+        </li>
+        <li>
+          <a href="#/priority-4">4</a>
+        </li>
+      </ul>
 			<% if (completed) { %>
 			<button id="clear-completed">Clear completed (<%= completed %>)</button>
 			<% } %>
